Hotfix to (hopefully) fix sidebar issues on mobile chrome

--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -511,7 +511,6 @@ div.blockquote > :last-child,
 	display: flex;
 	flex-flow: column nowrap;
 	align-items: center;
-	width: 18.75rem;
 	min-width: 30%;
 	box-shadow: 
 		0 0 0 0.0625rem rgba(var(--swatch-tertiary-color),1), 
